--- a/dswd3/index.html
+++ b/dswd3/index.html
@@ -149,7 +149,7 @@
       <li>
         <div class="name">Shinichiro Miyazaki</div>
         <div class="url"><a href="http://twitter.com/mashana" target="_blank">@mashana</a></div>
-        <div class="role">Graphics</div>
+        <div class="role">Character Design, Graphics</div>
       </li>
       <li>
         <div class="name">Mika Pikazo</div>
