--- a/dswd3/index.html
+++ b/dswd3/index.html
@@ -75,7 +75,7 @@
     <h2>Buy on shop</h2>
     <ul class="links">
       <li>COMIC ZIN</li>
-      <li>DIVERSE DIRECT</li>
+      <li><a href="https://diverse.direct/daisyworld/dswd3/" target="_blank">DIVERSE DIRECT</a></li>
     </ul>
   </article>
   <article id="cuts">
