--- a/dswd3/index.html
+++ b/dswd3/index.html
@@ -74,7 +74,7 @@
   <article id="buy">
     <h2>Buy on shop</h2>
     <ul class="links">
-      <li>COMIC ZIN</li>
+      <li><a href="http://shop.comiczin.jp/products/detail.php?product_id=27358" target="_blank">COMIC ZIN</a></li>
       <li><a href="https://diverse.direct/daisyworld/dswd3/" target="_blank">DIVERSE DIRECT</a></li>
     </ul>
   </article>
