--- a/dswd3/index.html
+++ b/dswd3/index.html
@@ -47,8 +47,9 @@
     <p>Enhanced Concept Book / 210mm x 257mm, 36 Pages</p>
   </header>
   <article id="product">
-    <h2>A.D.2015.12.31 Comic Market 89 3日目<br>東A77ab &ldquo;Futon. + DAISYWORLD&rdquo;（<a href="http://webcatalog.circle.ms/Circle/12342477">circle.ms</a>）</h2>
     <p class="lead">Enhanced Concept Book for DAISYWORLD</p>
+    <h2>A.D.2016.01.31 COMITIA<br>た14b &ldquo;DAISYWORLD&rdquo;</h2>
+    <h2><strike>A.D.2015.12.31 Comic Market 89 3日目<br>東A77ab &ldquo;Futon. + DAISYWORLD&rdquo;（<a href="http://webcatalog.circle.ms/Circle/12342477">circle.ms</a>）</strike></h2>
     <ul class="spec">
       <li>
         <div class="code">DSWD3</div>
