--- a/dswd4/index.html
+++ b/dswd4/index.html
@@ -68,6 +68,12 @@
       </li>
     </ul>
   </article>
+  <article id="buy">
+    <h2>Buy on shop</h2>
+    <ul class="links">
+      <li><a href="https://diverse.direct/daisyworld/dswd4/" target="_blank">DIVERSE DIRECT</a></li>
+    </ul>
+  </article>
   <article id="cuts">
     <ul >
       <li><img src="/images/dswd4/img_01.jpg" width="100%"></li>
