--- a/index.html
+++ b/index.html
@@ -135,6 +135,11 @@
     </ul>
     <ul class="member">
       <li>
+        <div class="name">Ryo Nakae</div>
+        <div class="url"><a href="http://twitter.com/ryo_dg" target="_blank">@ryo_dg</a></div>
+        <div class="role">Guest Illustration on &ldquo;DAISYWORLD: BACKSTAGE&rdquo;</div>
+      </li>
+      <li>
         <div class="name">Mika Pikazo</div>
         <div class="url"><a href="http://twitter.com/MikaPikazo" target="_blank">@MikaPikazo</a></div>
         <div class="role">Character Design on &ldquo;DAISYWORLD: A to Z&rdquo;</div>
