--- a/dswd5/index.html
+++ b/dswd5/index.html
@@ -65,7 +65,7 @@
       </li>
       <li>
         <div class="name">Print</div>
-        <div>表紙・フルカラーFMスクリーン印刷 / 本文・フルカラーFMスクリーン印刷 / 24 Pages</div>
+        <div>表紙・ストーンペーパー + フルカラーFMスクリーン印刷 / 本文・フルカラーFMスクリーン印刷 / 24 Pages</div>
       </li>
     </ul>
   </article>
