--- a/dswd5/index.html
+++ b/dswd5/index.html
@@ -6,7 +6,7 @@
   <title>DAISYWORLD: BACKSTAGE</title>
 
   <meta name="description" content="A platform of science fiction&#039;s world for creators" />
-  <meta name="keywords" content="DAISYWORLD,SF,Science Fiction,コミティア,COMITIA,tatsdesign,sezitak,kirusu,ginrei,mashana,MikaPikaZo,simadoriru,yoshida_seiji,fujino114,shachi,yam_cha,toshiki_izumi" />
+  <meta name="keywords" content="DAISYWORLD,SF,Science Fiction,コミティア,COMITIA,tatsdesign,sezitak,kirusu,ginrei,rgrphs,MikaPikaZo,simadoriru,yoshida_seiji,fujino114,shachi,yam_cha,toshiki_izumi" />
   <meta name="viewport" content="width=1000px">
 
   <meta property="og:title" content="DAISYWORLD: BACKSTAGE" />
@@ -46,18 +46,18 @@
   <header>
     <p class="logo"><img src="/images/dswd5/dd.svg" width="150" alt="DAISYWORLD"></p>
     <h1><span>DAISYWORLD: BACKSTAGE</span></h1>
-    <p>Resource Book / 148mm x 210mm, 24 Pages</p>
+    <p>Picture, Visual and Story Book of DAISYWORLD / 200mm x 297mm, 24 Pages</p>
   </header>
   <article id="product">
     <p class="lead">Resource Book of DAISYWORLD</p>
-    <h2>A.D.2016.08.14 Comic Market 90 3日目<br>西r08ab &ldquo;Futon. + DAISYWORLD&rdquo;（<a href="http://webcatalog.circle.ms/Circle/12738635">circle.ms</a>）</h2>
+    <h2>A.D.2016.08.14 Comic Market 90 3日目<br>西r-08ab &ldquo;Futon. + DAISYWORLD&rdquo;（<a href="http://webcatalog.circle.ms/Circle/12738635">circle.ms</a>）</h2>
     <ul class="spec">
       <li>
         <div class="code">DSWD5</div>
       </li>
       <li>
         <div class="name">Price on Event</div>
-        <div>800 JPY</div>
+        <div>1000 JPY</div>
       </li>
       <li>
         <div class="name">Dimension</div>
@@ -65,7 +65,11 @@
       </li>
       <li>
         <div class="name">Print</div>
-        <div>表紙・ストーンペーパー + フルカラーFMスクリーン印刷 / 本文・フルカラーFMスクリーン印刷 / 24 Pages</div>
+        <div>表紙・ストーンペーパー / 本文・ユーライト・FMスクリーン印刷 / 24 Pages</div>
+      </li>
+      <li>
+        <div class="name">Bonus on C90</div>
+        <div>ホログラムステッカー</div>
       </li>
     </ul>
   </article>
@@ -79,7 +83,31 @@
   </article>
   <article id="about">
     <h2>内容紹介</h2>
-    <p>2014年の年末に開催された、冬のコミックマーケットから<br><a href="http://twitter.com/tatsdesign" target="_blank">@tatsdesign</a>、<a href="http://twitter.com/sezitak" target="_blank">@sezitak</a>、<a href="http://twitter.com/kirusu" target="_blank">@kirusu</a>、<a href="http://twitter.com/mashana" target="_blank">@mashana</a>、<a href="http://twitter.com/toshiki_izumi" target="_blank">@toshiki_izumi</a>、<a href="http://twitter.com/ginrei" target="_blank">@ginrei</a> らが頒布している “DAISYWORLD” を<br>どのように制作してきたかを紹介する、メイキングレポートです</p>
+    <p>今回は、これまで制作し発表してきたDAISYWORLDの世界のキャラクターたちの新しい側面をはじめ、文化・テクノロジー、デザインの面からもアプローチした、オムニバスビジュアルブックです。<br>
+カバーイラストには、デイジーとミラのキャラクターデザインを担当し、最初期からご協力いただいている <a href="http://twitter.com/kirusu" target="_blank">@kirusu</a> さんにカバーイラストを描き下ろしていただきました。<br>
+さらに本文中には、「A GIRL MEETS HER SISTER」にてイラストを担当していただいた <a href="http://twitter.com/yam_cha" target="_blank">@yam_cha</a> さんに加え、<a href="http://twitter.com/hami_mi" target="_blank">@hami_mi</a> さんと <a href="http://twitter.com/fujino114" target="_blank">@fujino114</a> さんにもイラストを寄稿していただきました。加えて、今回初参加となる <a href="http://twitter.com/ryo_dg" target="_blank">@ryo_dg</a> さんからはマットペイントとイラストをコラボレーションさせたビジュアルを制作していただくなど、それぞれのクリエイターによるDAISYWORLDの世界観を表現しています。また、今回は、<a href="http://twitter.com/tatsdesign" target="_blank">@tatsdesign</a> と <a href="http://twitter.com/ginrei" target="_blank">@ginrei</a> 、 <a href="http://twitter.com/rgrphs" target="_blank">@rgrphs</a> 、 <a href="http://twitter.com/toshiki_izumi" target="_blank">@toshiki_izumi</a> によるイラスト・ビジュアルなども掲載しました。</p>
+    <ul class="detail">
+      <li>
+        <div class="name">カバーイラスト</div>
+        <div>kirusu</div>
+      </li>
+      <li>
+        <div class="name">イラスト</div>
+        <div>Ryo Nakae / Satoshi Tsuboya / Shinichiro Miyazaki / はみ / やむ茶 / 有馬トモユキ / kirusu</div>
+      </li>
+      <li>
+        <div class="name">漫画</div>
+        <div>富士フジノ / kirusu</div>
+      </li>
+      <li>
+        <div class="name">ジェネラティブイメージ</div>
+        <div>Toshiki Izumi</div>
+      </li>
+      <li>
+        <div class="name">テキスト</div>
+        <div>shachi</div>
+      </li>
+    </ul>
   </article>
   <article id="people">
     <h2>Staff</h2>
@@ -87,22 +115,22 @@
       <li>
         <div class="name">有馬トモユキ</div>
         <div class="url"><a href="http://twitter.com/tatsdesign" target="_blank">@tatsdesign</a></div>
-        <div class="role">Concept Design, Creative Direction, Design</div>
+        <div class="role">Concept Design, Creative Direction, Design, Illustration</div>
       </li>
       <li>
         <div class="name">瀬島卓也</div>
         <div class="url"><a href="http://twitter.com/sezitak" target="_blank">@sezitak</a></div>
-        <div class="role">Concept Design, Planning</div>
+        <div class="role">Concept Design</div>
       </li>
       <li>
         <div class="name">kirusu</div>
         <div class="url"><a href="http://twitter.com/kirusu" target="_blank">@kirusu</a></div>
-        <div class="role">Cover Illustration of &ldquo;DAISYWORLD: BACKSTAGE&rdquo;, Illustration</div>
+        <div class="role">Character Design, Illustration, Manga</div>
       </li>
       <li>
         <div class="name">Ryo Nakae</div>
         <div class="url"><a href="http://twitter.com/ryo_dg" target="_blank">@ryo_dg</a></div>
-        <div class="role">Illustration</div>
+        <div class="role">Digital Matte Paint, Illustration of &ldquo;DAISYWORLD: BACKSTAGE&rdquo;</div>
       </li>
       <li>
         <div class="name">ginrei</div>
@@ -111,33 +139,33 @@
       </li>
       <li>
         <div class="name">Shinichiro Miyazaki</div>
-        <div class="url"><a href="http://twitter.com/mashana" target="_blank">@mashana</a></div>
-        <div class="role">Graphics, Illustration</div>
+        <div class="url"><a href="http://twitter.com/rgrphs" target="_blank">@rgrphs</a></div>
+        <div class="role">3D Visual, Illustration</div>
       </li>
       <li>
         <div class="name">Toshiki Izumi</div>
         <div class="url"><a href="http://twitter.com/toshiki_izumi" target="_blank">@toshiki_izumi</a></div>
-        <div class="role">Programming, Technical Direction, Website</div>
+        <div class="role">Generative Image, Technical Direction, Website</div>
       </li>
       <li>
         <div class="name">はみ</div>
         <div class="url"><a href="http://twitter.com/hami_mi" target="_blank">@hami_mi</a></div>
-        <div class="role">Illustration</div>
+        <div class="role">Illustration of &ldquo;DAISYWORLD: BACKSTAGE&rdquo;</div>
       </li>
       <li>
         <div class="name">やむ茶</div>
         <div class="url"><a href="http://twitter.com/yam_cha" target="_blank">@yam_cha</a></div>
-        <div class="role">Illustration</div>
+        <div class="role">Illustration of &ldquo;DAISYWORLD: BACKSTAGE&rdquo;</div>
       </li>
       <li>
         <div class="name">富士フジノ</div>
         <div class="url"><a href="http://twitter.com/fujino114" target="_blank">@fujino114</a></div>
-        <div class="role">Illustration</div>
+        <div class="role">Manga of &ldquo;DAISYWORLD: BACKSTAGE&rdquo;</div>
       </li>
       <li>
         <div class="name">shachi</div>
         <div class="url"><a href="http://twitter.com/shachi" target="_blank">@shachi</a></div>
-        <div class="role">Story</div>
+        <div class="role">Text of &ldquo;DAISYWORLD: BACKSTAGE&rdquo;</div>
       </li>
     </ul>  </article>
   <footer>
