ナビ追加とヘッダー変更

--- a/dswd5/index.html
+++ b/dswd5/index.html
@@ -10,7 +10,7 @@
   <meta name="viewport" content="width=1000px">
 
   <meta property="og:title" content="DAISYWORLD: BACKSTAGE" />
-  <meta property="og:description" content="「DAISYWORLD: BACKSTAGE」は2016.08.14のC90・3日目に西r08bにて頒布されます。" />
+  <meta property="og:description" content="「DAISYWORLD: BACKSTAGE」は2016.08.14のC90・3日目に西r-08abにて頒布されます。" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="http://dswd.jp/dswd5" />
   <meta property="og:image" content="http://dswd.jp/images/dswd5/card.png" />
@@ -21,7 +21,7 @@
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:site" content="@daisyworld_info">
   <meta property="og:title" content="DAISYWORLD: BACKSTAGE" />
-  <meta property="og:description" content="「DAISYWORLD: BACKSTAGE」は2016.08.14のC90・3日目に西r08bにて頒布されます。" />
+  <meta property="og:description" content="「DAISYWORLD: BACKSTAGE」は2016.08.14のC90・3日目に西r-08abにて頒布されます。" />
   <meta property="og:image" content="http://dswd.jp/images/dswd5/card.png" />
 
   <link rel="shortcut icon" href="/images/icon.png">
@@ -32,7 +32,7 @@
   <![endif]-->
   <link type="text/css" rel="stylesheet" href="http://fast.fonts.net/cssapi/05ad25bd-7e45-41d0-99b3-6032cdd35909.css"/>
 </head>
-<body id="dswd4">
+<body id="dswd5">
   <nav class="clearfix">
     <ul class="clearfix">
       <li><a href="/">DAISYWORLD</a></li>
@@ -44,9 +44,9 @@
     </ul>
   </nav>
   <header>
-    <p class="logo"><img src="/images/dswd5/dd.svg" width="150" alt="DAISYWORLD"></p>
     <h1><span>DAISYWORLD: BACKSTAGE</span></h1>
     <p>Picture, Visual and Story Book of DAISYWORLD / 200mm x 297mm, 24 Pages</p>
+    <p class="logo"><img src="/images/dswd5/dd.svg" width="150" alt="DAISYWORLD"></p>
   </header>
   <article id="product">
     <p class="lead">Resource Book of DAISYWORLD</p>
