--- a/dswd5/index.html
+++ b/dswd5/index.html
@@ -79,6 +79,7 @@
       <li><img src="/images/dswd5/img_02.jpg" width="100%"></li>
       <li><img src="/images/dswd5/img_03.jpg" width="100%"></li>
       <li><img src="/images/dswd5/img_04.jpg" width="100%"></li>
+      <li><img src="/images/dswd5/img_05.jpg" width="100%"></li>
     </ul>
   </article>
   <article id="about">
