--- a/dswd5/index.html
+++ b/dswd5/index.html
@@ -49,7 +49,7 @@
     <p class="logo"><img src="/images/dswd5/dd.svg" width="150" alt="DAISYWORLD"></p>
   </header>
   <article id="product">
-    <p class="lead">Resource Book of DAISYWORLD</p>
+    <p class="lead">Picture, Visual and Story Book of DAISYWORLD</p>
     <h2>A.D.2016.08.14 Comic Market 90 3日目<br>西r-08ab &ldquo;Futon. + DAISYWORLD&rdquo;（<a href="http://webcatalog.circle.ms/Circle/12738635">circle.ms</a>）</h2>
     <ul class="spec">
       <li>
