--- a/dswd5/index.html
+++ b/dswd5/index.html
@@ -50,7 +50,8 @@
   </header>
   <article id="product">
     <p class="lead">Picture, Visual and Story Book of DAISYWORLD</p>
-    <h2>A.D.2016.08.14 Comic Market 90 3日目<br>西r-08ab &ldquo;Futon. + DAISYWORLD&rdquo;（<a href="http://webcatalog.circle.ms/Circle/12738635">circle.ms</a>）</h2>
+    <h2>A.D.2016.08.20 COMITIA<br>ぬ01b &ldquo;PRINTGEEK&rdquo;</h2>
+    <h2><strike>A.D.2016.08.14 Comic Market 90 3日目<br>西r-08ab &ldquo;Futon. + DAISYWORLD&rdquo;（<a href="http://webcatalog.circle.ms/Circle/12738635">circle.ms</a>）</strike></h2>
     <ul class="spec">
       <li>
         <div class="code">DSWD5</div>
