--- a/dswd5/index.html
+++ b/dswd5/index.html
@@ -70,6 +70,12 @@
       </li>
     </ul>
   </article>
+  <article id="buy">
+    <h2>Buy on shop</h2>
+    <ul class="links">
+      <li><a href="https://diverse.direct/daisyworld/dswd5/" target="_blank">DIVERSE DIRECT</a></li>
+    </ul>
+  </article>
   <article id="cuts">
     <ul >
       <li><img src="/images/dswd5/img_01.jpg" width="100%"></li>
