--- a/dswd5/index.html
+++ b/dswd5/index.html
@@ -73,6 +73,7 @@
   <article id="buy">
     <h2>Buy on shop</h2>
     <ul class="links">
+      <li><a href="http://shop.comiczin.jp/products/detail.php?product_id=29860" target="_blank">COMIC ZIN</a></li>
       <li><a href="https://diverse.direct/daisyworld/dswd5/" target="_blank">DIVERSE DIRECT</a></li>
     </ul>
   </article>
