--- a/dswd6/index.html
+++ b/dswd6/index.html
@@ -3,17 +3,16 @@
 <head>
 
   <meta charset="utf-8">
-  <title>DAISYWORLD: BACKSTAGE</title>
+  <title>DAISYWORLD: DIALOGUES</title>
 
   <meta name="description" content="A platform of science fiction&#039;s world for creators" />
-  <meta name="keywords" content="DAISYWORLD,SF,Science Fiction,コミティア,COMITIA,tatsdesign,sezitak,kirusu,ginrei,rgrphs,MikaPikaZo,simadoriru,yoshida_seiji,fujino114,shachi,yam_cha,toshiki_izumi" />
+  <meta name="keywords" content="DAISYWORLD,SF,Science Fiction,コミティア,COMITIA,tatsdesign,sezitak,kirusu,ginrei,rgrphs,simadoriru,shachi,toshiki_izumi" />
   <meta name="viewport" content="width=1000px">
 
-  <meta property="og:title" content="DAISYWORLD: BACKSTAGE" />
-  <meta property="og:description" content="「DAISYWORLD: BACKSTAGE」は2016.08.14のC90・3日目に西r-08abにて頒布されます。" />
+  <meta property="og:title" content="DAISYWORLD: DIALOGUES" />
+  <meta property="og:description" content="「DAISYWORLD: DIALOGUES」は2017.5.6のCOMITIAにＥ16aにて頒布されます。" />
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="http://dswd.jp/dswd5" />
-  <meta property="og:image" content="http://dswd.jp/images/dswd5/card.png" />
+  <meta property="og:image" content="http://dswd.jp/images/dswd6/card.png" />
   <meta property="og:site_name" content="DAISYWORLD" />
 
   <meta property="article:publisher" content="DAISYWORLD" />
@@ -21,8 +20,8 @@
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:site" content="@daisyworld_info">
   <meta property="og:title" content="DAISYWORLD: BACKSTAGE" />
-  <meta property="og:description" content="「DAISYWORLD: BACKSTAGE」は2016.08.14のC90・3日目に西r-08abにて頒布されます。" />
-  <meta property="og:image" content="http://dswd.jp/images/dswd5/card.png" />
+  <meta property="og:description" content="「DAISYWORLD: DIALOGUES」は2017.5.6のCOMITIAにＥ16aにて頒布されます。" />
+  <meta property="og:image" content="http://dswd.jp/images/dswd6/card.png" />
 
   <link rel="shortcut icon" href="/images/icon.png">
   <link rel="stylesheet" href="/css/style.css" />
@@ -32,11 +31,11 @@
   <![endif]-->
   <link type="text/css" rel="stylesheet" href="http://fast.fonts.net/cssapi/05ad25bd-7e45-41d0-99b3-6032cdd35909.css"/>
 </head>
-<body id="dswd5">
+<body id="dswd6">
   <nav class="clearfix">
     <ul class="clearfix">
       <li><a href="/" class="current">DAISYWORLD</a></li>
-      <li><a href="/dswd6" class="highlight current">DAISYWORLD: DIALOG</a></li>
+      <li><a href="/dswd6" class="highlight current">DAISYWORLD: DIALOGUES</a></li>
       <li><a href="/dswd5">DAISYWORLD: BACKSTAGE</a></li>
       <li><a href="/dswd4">MAKE: DAISYWORLD</a></li>
       <li><a href="/dswd3">DAISYWORLD: A to Z</a></li>
@@ -45,18 +44,16 @@
     </ul>
   </nav>
   <header>
-    <h1><span>DAISYWORLD: BACKSTAGE</span></h1>
-    <p>Picture, Visual and Story Book of DAISYWORLD / 200mm x 297mm, 24 Pages</p>
+    <h1><span>DAISYWORLD: DIALOGUES</span></h1>
+    <p>Picture, Visual and Interview Book of DAISYWORLD / 186mm x 231mm, 40 Pages</p>
     <p class="logo"><img src="/images/dswd5/dd.svg" width="150" alt="DAISYWORLD"></p>
   </header>
   <article id="product">
-    <p class="lead">Picture, Visual and Story Book of DAISYWORLD</p>
-    <h2>A.D.2016.10.23 COMITIA<br>え03a &ldquo;DAISYWORLD&rdquo;</h2>
-    <h2><strike>A.D.2016.08.20 COMITIA<br>ぬ01b &ldquo;PRINTGEEK&rdquo;</strike></h2>
-    <h2><strike>A.D.2016.08.14 Comic Market 90 3日目<br>西r-08ab &ldquo;Futon. + DAISYWORLD&rdquo;（<a href="http://webcatalog.circle.ms/Circle/12738635">circle.ms</a>）</strike></h2>
+    <p class="lead">Picture, Visual and Interview Book of DAISYWORLD</p>
+    <h2>A.D.2017.5.6 COMITIA<br>Ｅ16a &ldquo;DAISYWORLD&rdquo;</h2>
     <ul class="spec">
       <li>
-        <div class="code">DSWD5</div>
+        <div class="code">DSWD6</div>
       </li>
       <li>
         <div class="name">Price on Event</div>
@@ -64,51 +61,42 @@
       </li>
       <li>
         <div class="name">Dimension</div>
-        <div>200mm x 297mm</div>
+        <div>186mm x 231mm</div>
       </li>
       <li>
         <div class="name">Print</div>
-        <div>表紙・ストーンペーパー / 本文・ユーライト・FMスクリーン印刷 / 24 Pages</div>
+        <div>表紙・4色印刷 / 本文・モノクロ印刷 / 40 Pages</div>
       </li>
-    </ul>
-  </article>
-  <article id="buy">
-    <h2>Buy on shop</h2>
-    <ul class="links">
-      <li><a href="http://shop.comiczin.jp/products/detail.php?product_id=29860" target="_blank">COMIC ZIN</a></li>
-      <li><a href="https://diverse.direct/daisyworld/dswd5/" target="_blank">DIVERSE DIRECT</a></li>
     </ul>
   </article>
   <article id="cuts">
     <ul>
-      <li><img src="/images/dswd5/img_01.jpg" width="100%"></li>
-      <li><img src="/images/dswd5/img_02.jpg" width="100%"></li>
-      <li><img src="/images/dswd5/img_03.jpg" width="100%"></li>
-      <li><img src="/images/dswd5/img_04.jpg" width="100%"></li>
-      <li><img src="/images/dswd5/img_05.jpg" width="100%"></li>
+      <li><img src="/images/dswd6/img_01.jpg" width="100%"></li>
+      <li><img src="/images/dswd6/img_02.jpg" width="100%"></li>
+      <li><img src="/images/dswd6/img_03.jpg" width="100%"></li>
+      <li><img src="/images/dswd6/img_04.jpg" width="100%"></li>
+      <li><img src="/images/dswd6/img_05.jpg" width="100%"></li>
     </ul>
   </article>
   <article id="about">
     <h2>内容紹介</h2>
-    <p>今回は、これまで制作し発表してきたDAISYWORLDの世界のキャラクターたちの新しい側面をはじめ、文化・テクノロジー、デザインの面からもアプローチした、オムニバスビジュアルブックです。<br>
-カバーイラストには、デイジーとミラのキャラクターデザインを担当し、最初期からご協力いただいている <a href="http://twitter.com/kirusu" target="_blank">@kirusu</a> さんにカバーイラストを描き下ろしていただきました。<br>
-さらに本文中には、「A GIRL MEETS HER SISTER」にてイラストを担当していただいた <a href="http://twitter.com/yam_cha" target="_blank">@yam_cha</a> さんに加え、<a href="http://twitter.com/hami_mi" target="_blank">@hami_mi</a> さんと <a href="http://twitter.com/fujino114" target="_blank">@fujino114</a> さんにもイラストを寄稿していただきました。加えて、今回初参加となる <a href="http://twitter.com/ryo_dg" target="_blank">@ryo_dg</a> さんからはマットペイントとイラストをコラボレーションさせたビジュアルを制作していただくなど、それぞれのクリエイターによるDAISYWORLDの世界観を表現しています。また、今回は、<a href="http://twitter.com/tatsdesign" target="_blank">@tatsdesign</a> と <a href="http://twitter.com/ginrei" target="_blank">@ginrei</a> 、 <a href="http://twitter.com/rgrphs" target="_blank">@rgrphs</a> 、 <a href="http://twitter.com/toshiki_izumi" target="_blank">@toshiki_izumi</a> によるイラスト・ビジュアルなども掲載しました。</p>
+    <p>今回の本のコンセプトは「DAISYWORLDという作品をどのように展開していくかの予備調査レポート」です。SF作家、エンジニア、シナリオライター、アニメーション監督といった様々なジャンルの第一線で活躍されている方々へのインタビューを掲載しています。<br><br>2014年12月のコミックマーケットからスタートした、DAISYWORLDというオリジナルSFのもともとの企画趣旨は、「物語を生み出す構造自体のデザインができないか」というものでした。これまで計5冊の本をリリースしてきましたが、このタイミングで一度立ち止まり、私たちが生きる現実世界からDAISYWORLDの世界や今後の創作活動に活かすことが可能なコンセプトやアイデアがないかを見つけられないだろうか──<br><br>その思いから、この本は取材レポートという形でお届けします。お手にとってくださったみなさんの創作意欲や発想の起点となる気づきがインタビューの中から発見していただければ幸いです。</p>
     <ul class="detail">
       <li>
+        <div class="name">インタビュイー</div>
+        <div>長谷敏司 / 下倉バイオ / 小林浩康 / 田川欣哉　（敬称略・掲載順）</div>
+      </li>
+      <li>
         <div class="name">カバーイラスト</div>
-        <div>kirusu</div>
+        <div>しまどりる / kirusu</div>
       </li>
       <li>
         <div class="name">イラスト</div>
-        <div>Ryo Nakae / Satoshi Tsuboya / Shinichiro Miyazaki / はみ / やむ茶 / 有馬トモユキ / kirusu</div>
+        <div>爽々</div>
       </li>
       <li>
-        <div class="name">漫画</div>
-        <div>富士フジノ / kirusu</div>
-      </li>
-      <li>
-        <div class="name">ジェネラティブイメージ</div>
-        <div>Toshiki Izumi</div>
+        <div class="name">CG</div>
+        <div>Shinichiro Miyazaki</div>
       </li>
       <li>
         <div class="name">テキスト</div>
@@ -122,7 +110,7 @@
       <li>
         <div class="name">有馬トモユキ</div>
         <div class="url"><a href="http://twitter.com/tatsdesign" target="_blank">@tatsdesign</a></div>
-        <div class="role">Concept Design, Creative Direction, Design, Illustration</div>
+        <div class="role">Concept Design, Creative Direction, Design</div>
       </li>
       <li>
         <div class="name">瀬島卓也</div>
@@ -132,51 +120,42 @@
       <li>
         <div class="name">kirusu</div>
         <div class="url"><a href="http://twitter.com/kirusu" target="_blank">@kirusu</a></div>
-        <div class="role">Character Design, Illustration, Manga</div>
+        <div class="role">Cover Illustration</div>
       </li>
       <li>
-        <div class="name">Ryo Nakae</div>
-        <div class="url"><a href="http://twitter.com/ryo_dg" target="_blank">@ryo_dg</a></div>
-        <div class="role">Digital Matte Paint, Illustration of &ldquo;DAISYWORLD: BACKSTAGE&rdquo;</div>
+        <div class="name">しまどりる</div>
+        <div class="url"><a href="http://twitter.com/simadoriru" target="_blank">@simadoriru</a></div>
+        <div class="role">Cover Illustration</div>
       </li>
       <li>
-        <div class="name">ginrei</div>
-        <div class="url"><a href="http://twitter.com/ginrei" target="_blank">@ginrei</a></div>
-        <div class="role">Concept, Research, Illustration</div>
+        <div class="name">爽々</div>
+        <div class="url"><a href="http://twitter.com/_sousou_" target="_blank">@_sousou_</a></div>
+        <div class="role">Illustration</div>
       </li>
       <li>
         <div class="name">Shinichiro Miyazaki</div>
         <div class="url"><a href="http://twitter.com/rgrphs" target="_blank">@rgrphs</a></div>
-        <div class="role">3D Visual, Illustration</div>
-      </li>
-      <li>
-        <div class="name">Toshiki Izumi</div>
-        <div class="url"><a href="http://twitter.com/toshiki_izumi" target="_blank">@toshiki_izumi</a></div>
-        <div class="role">Generative Image, Technical Direction, Website</div>
-      </li>
-      <li>
-        <div class="name">はみ</div>
-        <div class="url"><a href="http://twitter.com/hami_mi" target="_blank">@hami_mi</a></div>
-        <div class="role">Illustration of &ldquo;DAISYWORLD: BACKSTAGE&rdquo;</div>
-      </li>
-      <li>
-        <div class="name">やむ茶</div>
-        <div class="url"><a href="http://twitter.com/yam_cha" target="_blank">@yam_cha</a></div>
-        <div class="role">Illustration of &ldquo;DAISYWORLD: BACKSTAGE&rdquo;</div>
-      </li>
-      <li>
-        <div class="name">富士フジノ</div>
-        <div class="url"><a href="http://twitter.com/fujino114" target="_blank">@fujino114</a></div>
-        <div class="role">Manga of &ldquo;DAISYWORLD: BACKSTAGE&rdquo;</div>
+        <div class="role">3D Visual</div>
       </li>
       <li>
         <div class="name">shachi</div>
         <div class="url"><a href="http://twitter.com/shachi" target="_blank">@shachi</a></div>
-        <div class="role">Text of &ldquo;DAISYWORLD: BACKSTAGE&rdquo;</div>
+        <div class="role">Text of &ldquo;DAISYWORLD: DIALOGUES&rdquo;</div>
       </li>
-    </ul>  </article>
+      <li>
+        <div class="name">Toshiki Izumi</div>
+        <div class="url"><a href="http://twitter.com/toshiki_izumi" target="_blank">@toshiki_izumi</a></div>
+        <div class="role">Technical Direction, Website</div>
+      </li>
+      <li>
+        <div class="name">ginrei</div>
+        <div class="url"><a href="http://twitter.com/ginrei" target="_blank">@ginrei</a></div>
+        <div class="role">Concept, Research</div>
+      </li>
+    </ul>
+  </article>
   <footer>
-    <p>&copy; 2016 DAISYWORLD | <a href="http://twitter.com/daisyworld_info" target="_blank">@daisyworld_info</a></p>
+    <p>&copy; 2017 DAISYWORLD | <a href="http://twitter.com/daisyworld_info" target="_blank">@daisyworld_info</a></p>
   </footer>
   <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
