--- a/dswd6/index.html
+++ b/dswd6/index.html
@@ -6,11 +6,11 @@
   <title>DAISYWORLD: DIALOGUES</title>
 
   <meta name="description" content="A platform of science fiction&#039;s world for creators" />
-  <meta name="keywords" content="DAISYWORLD,SF,Science Fiction,コミティア,COMITIA,tatsdesign,sezitak,kirusu,ginrei,rgrphs,simadoriru,shachi,toshiki_izumi" />
+  <meta name="keywords" content="DAISYWORLD,SF,Science Fiction,コミティア,COMITIA,tatsdesign,sezitak,kirusu,ginrei,rgrphs,simadoriru,_sousou_,robamoto,shachi,toshiki_izumi" />
   <meta name="viewport" content="width=1000px">
 
   <meta property="og:title" content="DAISYWORLD: DIALOGUES" />
-  <meta property="og:description" content="「DAISYWORLD: DIALOGUES」は2017.5.6のCOMITIAにＥ16aにて頒布されます。" />
+  <meta property="og:description" content="「DAISYWORLD: DIALOGUES」は2017.05.06 COMITIA、E16aにて頒布されます。" />
   <meta property="og:type" content="website" />
   <meta property="og:image" content="http://dswd.jp/images/dswd6/card.png" />
   <meta property="og:site_name" content="DAISYWORLD" />
@@ -20,7 +20,7 @@
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:site" content="@daisyworld_info">
   <meta property="og:title" content="DAISYWORLD: BACKSTAGE" />
-  <meta property="og:description" content="「DAISYWORLD: DIALOGUES」は2017.5.6のCOMITIAにＥ16aにて頒布されます。" />
+  <meta property="og:description" content="「DAISYWORLD: DIALOGUES」は2017.05.06 COMITIA、E16aにて頒布されます。" />
   <meta property="og:image" content="http://dswd.jp/images/dswd6/card.png" />
 
   <link rel="shortcut icon" href="/images/icon.png">
@@ -35,29 +35,29 @@
   <nav class="clearfix">
     <ul class="clearfix">
       <li><a href="/" class="current">DAISYWORLD</a></li>
-      <li><a href="/dswd6" class="highlight current">DAISYWORLD: DIALOGUES</a></li>
-      <li><a href="/dswd5">DAISYWORLD: BACKSTAGE</a></li>
-      <li><a href="/dswd4">MAKE: DAISYWORLD</a></li>
-      <li><a href="/dswd3">DAISYWORLD: A to Z</a></li>
-      <li><a href="/dswd2">DAISYWORLD: AGMHS</a></li>
+      <li><a href="/dswd6" class="highlight current">DIALOGUES</a></li>
+      <li><a href="/dswd5">BACKSTAGE</a></li>
+      <li><a href="/dswd4">MAKE</a></li>
+      <li><a href="/dswd3">A to Z</a></li>
+      <li><a href="/dswd2">AGMHS</a></li>
       <li><a href="/dswd1">DAISYWORLD 1</a></li>
     </ul>
   </nav>
   <header>
     <h1><span>DAISYWORLD: DIALOGUES</span></h1>
-    <p>Picture, Visual and Interview Book of DAISYWORLD / 186mm x 231mm, 40 Pages</p>
-    <p class="logo"><img src="/images/dswd5/dd.svg" width="150" alt="DAISYWORLD"></p>
+    <p>Interview, Visual and Story Book of DAISYWORLD / 186mm x 231mm, 40 Pages</p>
+    <p class="logo"><img src="/images/dswd6/dd.svg" width="150" alt="DAISYWORLD"></p>
   </header>
   <article id="product">
-    <p class="lead">Picture, Visual and Interview Book of DAISYWORLD</p>
-    <h2>A.D.2017.5.6 COMITIA<br>Ｅ16a &ldquo;DAISYWORLD&rdquo;</h2>
+    <p class="lead">Interview, Visual and Story Book of DAISYWORLD</p>
+    <h2>A.D.2017.05.06 COMITIA<br>E16a &ldquo;DAISYWORLD&rdquo;</h2>
     <ul class="spec">
       <li>
         <div class="code">DSWD6</div>
       </li>
       <li>
         <div class="name">Price on Event</div>
-        <div>1000 JPY</div>
+        <div>500 JPY</div>
       </li>
       <li>
         <div class="name">Dimension</div>
@@ -65,37 +65,36 @@
       </li>
       <li>
         <div class="name">Print</div>
-        <div>表紙・4色印刷 / 本文・モノクロ印刷 / 40 Pages</div>
+        <div>表紙・ミルトGAスピリット / 本文・MTA++FS, B7バルキー / 40 Pages</div>
       </li>
     </ul>
   </article>
   <article id="cuts">
     <ul>
-      <li><img src="/images/dswd6/img_01.jpg" width="100%"></li>
-      <li><img src="/images/dswd6/img_02.jpg" width="100%"></li>
-      <li><img src="/images/dswd6/img_03.jpg" width="100%"></li>
-      <li><img src="/images/dswd6/img_04.jpg" width="100%"></li>
-      <li><img src="/images/dswd6/img_05.jpg" width="100%"></li>
+      <li><img src="/images/dswd6/dswd6_0.png" width="100%"></li>
+      <li><img src="/images/dswd6/dswd6_1.png" width="100%"></li>
+      <li><img src="/images/dswd6/dswd6_2.png" width="100%"></li>
+      <li><img src="/images/dswd6/dswd6_3.png" width="100%"></li>
     </ul>
   </article>
   <article id="about">
     <h2>内容紹介</h2>
-    <p>今回の本のコンセプトは「DAISYWORLDという作品をどのように展開していくかの予備調査レポート」です。SF作家、エンジニア、シナリオライター、アニメーション監督といった様々なジャンルの第一線で活躍されている方々へのインタビューを掲載しています。<br><br>2014年12月のコミックマーケットからスタートした、DAISYWORLDというオリジナルSFのもともとの企画趣旨は、「物語を生み出す構造自体のデザインができないか」というものでした。これまで計5冊の本をリリースしてきましたが、このタイミングで一度立ち止まり、私たちが生きる現実世界からDAISYWORLDの世界や今後の創作活動に活かすことが可能なコンセプトやアイデアがないかを見つけられないだろうか──<br><br>その思いから、この本は取材レポートという形でお届けします。お手にとってくださったみなさんの創作意欲や発想の起点となる気づきがインタビューの中から発見していただければ幸いです。</p>
+    <p>今回は、これまで制作し発表してきたDAISYWORLDの世界観と、私たちが生きる現実世界のテクノロジー、クリエイティブとの間にどのような共通項があるのか、さらに今後DAISYWORLDをどう発展させていくかを取材したインタビュー集とキャラクターたちの新しい側面にもアプローチしたハイブリッドな冊子となりました。<br>
+収録したインタビューには、小説家・長谷敏司さん、ニトロプラス・下倉バイオさん、Takram・田川欣哉さん、カラー・小林浩康さんの4人などさまざまなジャンルのクリエイターのお話を収録しています。<br>
+カバーイラストには、「DAISYWORLD: A to Z」から登場したジルコンを生み出した <a href="http://twitter.com/simadoriru" target="_blank">@simadoriru</a> さんによる描き下ろしイラストを制作いただきました。また、バックカバーには企画立ち上げ時からご協力いただいている <a href="http://twitter.com/kirusu" target="_blank">@kirusu</a> さんによるイラストを描き下ろしていただいています。<br>
+さらに本文中には、スターターブック「DAISYWORLD」でもゲストイラストを寄稿していただいた <a href="http://twitter.com/robamoto" target="_blank">@robamoto</a> さんと、<a href="http://twitter.com/_sousou_" target="_blank">@_sousou_</a> さんからイラストを提供していただきました。さらに、<a href="http://twitter.com/rgrphs" target="_blank">@rgrphs</a> が3DCGによる物理交換エンジンのビジュアルに加えて、<a href="http://twitter.com/kirusu" target="_blank">@kirusu</a> さんのカバーイラストと連動した <a href="http://twitter.com/shachi" target="_blank">@shachi</a> さんによるデイジーとミラのショートストーリーも掲載。さまざまなクリエイターの想像力が反映されたDAISYWORLDの世界観をお楽しみください。
+</p>
     <ul class="detail">
-      <li>
-        <div class="name">インタビュイー</div>
-        <div>長谷敏司 / 下倉バイオ / 小林浩康 / 田川欣哉　（敬称略・掲載順）</div>
-      </li>
       <li>
         <div class="name">カバーイラスト</div>
         <div>しまどりる / kirusu</div>
       </li>
       <li>
         <div class="name">イラスト</div>
-        <div>爽々</div>
+        <div>爽々 / robamoto</div>
       </li>
       <li>
-        <div class="name">CG</div>
+        <div class="name">グラフィック</div>
         <div>Shinichiro Miyazaki</div>
       </li>
       <li>
@@ -110,7 +109,7 @@
       <li>
         <div class="name">有馬トモユキ</div>
         <div class="url"><a href="http://twitter.com/tatsdesign" target="_blank">@tatsdesign</a></div>
-        <div class="role">Concept Design, Creative Direction, Design</div>
+        <div class="role">Concept Design, Planning, Writing</div>
       </li>
       <li>
         <div class="name">瀬島卓也</div>
@@ -118,18 +117,23 @@
         <div class="role">Concept Design</div>
       </li>
       <li>
-        <div class="name">kirusu</div>
-        <div class="url"><a href="http://twitter.com/kirusu" target="_blank">@kirusu</a></div>
-        <div class="role">Cover Illustration</div>
-      </li>
-      <li>
         <div class="name">しまどりる</div>
         <div class="url"><a href="http://twitter.com/simadoriru" target="_blank">@simadoriru</a></div>
         <div class="role">Cover Illustration</div>
       </li>
       <li>
+        <div class="name">kirusu</div>
+        <div class="url"><a href="http://twitter.com/kirusu" target="_blank">@kirusu</a></div>
+        <div class="role">Character Design, Cover Illustration</div>
+      </li>
+      <li>
         <div class="name">爽々</div>
         <div class="url"><a href="http://twitter.com/_sousou_" target="_blank">@_sousou_</a></div>
+        <div class="role">Illustration</div>
+      </li>
+      <li>
+        <div class="name">robamoto</div>
+        <div class="url"><a href="http://twitter.com/robamoto" target="_blank">@robamoto</a></div>
         <div class="role">Illustration</div>
       </li>
       <li>
@@ -145,12 +149,12 @@
       <li>
         <div class="name">Toshiki Izumi</div>
         <div class="url"><a href="http://twitter.com/toshiki_izumi" target="_blank">@toshiki_izumi</a></div>
-        <div class="role">Technical Direction, Website</div>
+        <div class="role">Website</div>
       </li>
       <li>
         <div class="name">ginrei</div>
         <div class="url"><a href="http://twitter.com/ginrei" target="_blank">@ginrei</a></div>
-        <div class="role">Concept, Research</div>
+        <div class="role">Concept</div>
       </li>
     </ul>
   </article>
