--- a/dswd6/index.html
+++ b/dswd6/index.html
@@ -19,7 +19,7 @@
 
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:site" content="@daisyworld_info">
-  <meta property="og:title" content="DAISYWORLD: BACKSTAGE" />
+  <meta property="og:title" content="DAISYWORLD: DIALOGUES" />
   <meta property="og:description" content="「DAISYWORLD: DIALOGUES」は2017.05.06 COMITIA、E16aにて頒布されます。" />
   <meta property="og:image" content="http://dswd.jp/images/dswd6/card.png" />
 
