--- a/dswd7/index.html
+++ b/dswd7/index.html
@@ -12,7 +12,7 @@
 	<meta property="og:title" content="DAISYWORLD: DAWN" />
 	<meta property="og:description" content="「DAISYWORLD: DAWN」は2017.12.31のC93・3日目に東ロ-28abにて頒布されます。" />
 	<meta property="og:type" content="website" />
-	<meta property="og:image" content="http://dswd.jp/images/dswd7/card.png" />
+	<meta property="og:image" content="http://dswd.jp/images/dswd7/card.png?171227" />
 	<meta property="og:site_name" content="DAISYWORLD" />
 
 	<meta property="article:publisher" content="DAISYWORLD" />
@@ -21,7 +21,7 @@
 	<meta name="twitter:site" content="@daisyworld_info">
 	<meta property="og:title" content="DAISYWORLD: DAWN" />
 	<meta property="og:description" content="「DAISYWORLD: DAWN」は2017.12.31のC93・3日目に東ロ-28abにて頒布されます。" />
-	<meta property="og:image" content="http://dswd.jp/images/dswd7/card.png" />
+	<meta property="og:image" content="http://dswd.jp/images/dswd7/card.png?171227" />
 
 	<link rel="shortcut icon" href="/images/icon.png">
 	<link rel="stylesheet" href="/css/style.css" />
