--- a/dswd8/index.html
+++ b/dswd8/index.html
@@ -3,25 +3,25 @@
 <head>
 
 	<meta charset="utf-8">
-	<title>DAISYWORLD: DAWN</title>
+	<title>DAISYWORLD: CONTAINER</title>
 
 	<meta name="description" content="A platform of science fiction&#039;s world for creators" />
 	<meta name="keywords" content="DAISYWORLD,SF,Science Fiction,コミックマーケット,COMICMARKET,コミケ,C93,tatsdesign,sezitak,kirusu,ginrei,shachi,toshiki_izumi" />
 	<meta name="viewport" content="width=1000px">
 
 	<meta property="og:title" content="DAISYWORLD: DAWN" />
-	<meta property="og:description" content="「DAISYWORLD: DAWN」は2017.12.31のC93・3日目に東ロ-28abにて頒布されます。" />
+	<meta property="og:description" content="「DAISYWORLD: CONTAINER」は2018.12.31のC96・3日目に東ハ-46abにて頒布されます。" />
 	<meta property="og:type" content="website" />
-	<meta property="og:image" content="http://dswd.jp/images/dswd7/card.png?171227" />
+	<meta property="og:image" content="http://dswd.jp/images/dswd8/card.png" />
 	<meta property="og:site_name" content="DAISYWORLD" />
 
 	<meta property="article:publisher" content="DAISYWORLD" />
 
 	<meta name="twitter:card" content="summary_large_image">
 	<meta name="twitter:site" content="@daisyworld_info">
-	<meta property="og:title" content="DAISYWORLD: DAWN" />
-	<meta property="og:description" content="「DAISYWORLD: DAWN」は2017.12.31のC93・3日目に東ロ-28abにて頒布されます。" />
-	<meta property="og:image" content="http://dswd.jp/images/dswd7/card.png?171227" />
+	<meta property="og:title" content="DAISYWORLD: CONTAINER" />
+	<meta property="og:description" content="「DAISYWORLD: CONTAINER」は2018.12.31のC96・3日目に東ハ-46abにて頒布されます。" />
+	<meta property="og:image" content="http://dswd.jp/images/dswd8/card.png" />
 
 	<link rel="shortcut icon" href="/images/icon.png">
 	<link rel="stylesheet" href="/css/style.css" />
@@ -31,7 +31,7 @@
 	<![endif]-->
 	<link type="text/css" rel="stylesheet" href="http://fast.fonts.net/cssapi/05ad25bd-7e45-41d0-99b3-6032cdd35909.css"/>
 </head>
-<body id="dswd7">
+<body id="dswd8">
 	<nav class="clearfix">
 		<ul class="clearfix">
 			<li><a href="/">DAISYWORLD</a></li>
@@ -46,16 +46,16 @@
 		</ul>
 	</nav>
 	<header>
-		<h1><span>DAISYWORLD: DAWN</span></h1>
-		<p>Short graphic novel of DAISYWORLD / 152mm x 229mm, 32 Pages</p>
-		<p class="logo"><img src="/images/dswd7/dd.svg" width="150" alt="DAISYWORLD"></p>
+		<h1><span>DAISYWORLD: CONTAINER</span></h1>
+		<p>DAISYWORLD to IMAGE, BEHAVIOR, SOUL, / 182mm x 257mm, 16 Pages</p>
+		<p class="logo"><img src="/images/dswd8/dd.svg" width="150" alt="DAISYWORLD"></p>
 	</header>
 	<article id="product">
-		<p class="lead">Short graphic novel of DAISYWORLD</p>
-		<h2>A.D.2017.12.31 Comic Market 93 3日目<br>東ロ-28ab &ldquo;Futon. + DAISYWORLD&rdquo;（<a href="http://webcatalog.circle.ms/Circle/13641698">circle.ms</a>）</h2>
+		<p class="lead">DAISYWORLD to IMAGE, BEHAVIOR, SOUL,</p>
+		<h2>A.D.2018.12.31 Comic Market 95 3日目<br>東ハ-46ab &ldquo;Futon. + DAISYWORLD&rdquo;（<a href="https://webcatalog.circle.ms/Circle/14243185">circle.ms</a>）</h2>
 		<ul class="spec">
 			<li>
-				<div class="code">DSWD7</div>
+				<div class="code">DSWD8</div>
 			</li>
 			<li>
 				<div class="name">Price on Event</div>
@@ -63,11 +63,11 @@
 			</li>
 			<li>
 				<div class="name">Dimension</div>
-				<div>152mm x 229mm</div>
+				<div>182mm x 257mm</div>
 			</li>
 			<li>
 				<div class="name">Print</div>
-				<div>表紙・ウルトラアクアサテン / 本文・HSホワイトハミング / 32 Pages</div>
+				<div>本文フルカラー・FMスクリーン印刷 + TS-8用紙による帯 / 16 Pages</div>
 			</li>
 		</ul>
 	</article>
@@ -79,19 +79,16 @@
 	</article>
 	<article id="cuts">
 		<ul>
-			<li><img src="/images/dswd7/dswd7_0.png" width="100%"></li>
-			<li><img src="/images/dswd7/dswd7_1.png" width="100%"></li>
-			<li><img src="/images/dswd7/dswd7_2.png" width="100%"></li>
-			<li><img src="/images/dswd7/dswd7_3.png" width="100%"></li>
+			<li><img src="/images/dswd8/dswd8_1.png" width="100%"></li>
+			<li><img src="/images/dswd8/dswd8_2.png" width="100%"></li>
+			<li><img src="/images/dswd8/dswd8_3.png" width="100%"></li>
+			<li><img src="/images/dswd8/dswd8_4.png" width="100%"></li>
 		</ul>
 	</article>
 	<article id="about">
 		<h2>内容紹介</h2>
 		<p>
-
-			DAISYWORLD: DAWNは、DAISYWORLDのキャラクターデザインを担当している <a href="http://twitter.com/kirusu" target="_blank">@kirusu</a> によるストーリー漫画を収録しました。今までは<a href="/dswd5">DAISYWORLD: BACKSTAGE</a>などで断片的に1ページの漫画を発表することがありましたが、連続した短編は今回が初の試みとなります。<br>
-			近年、イラストレーターとしても、漫画家としても大きな飛躍を遂げつつあるkirusuさんの新作となる今回は、<a href="/dswd1">DAIYWORLD: 1</a>で最初に発表された世界観をプロットする構成を取っています。はじめてDAISYWORLDに触れる方にも最適です。<br>
-			今回もご参加いただいた <a href="http://twitter.com/shachi" target="_blank">@shachi</a> さんには、デイジーに加えて、ステムの4人が短い時間を楽しむショートストーリーを寄稿いただきました。巻末の <a href="http://twitter.com/sezitak" target="_blank">@sezitak</a> のエッセイと共にお楽しみください。
+			ようこそ、2018年へ。一部では、人々は本当に自分の精神 / 身体のつながりから解放されつつある時代ですが、DAISYWORLD: CONTAINERはそれについて思いをはせた、短い本になります。DAISYWORLDの世界では、ミラたちステムはすべてデイジーをヒントにした複製です。ですから魂が宿るし、移動もできるというロジックを持っています。そうしたことをテーマに、 <a href="http://twitter.com/kirusu" target="_blank">@kirusu</a> さんによる抽象的なイラストレーションを構築していただきました。デイジーとステムたちがそれぞれに成長した2018年現在の姿を描写しています。 <a href="http://twitter.com/shachi" target="_blank">@shachi</a> さんによるショートストーリー “The Bridge” は、臨海地域をデイジーとステムの2人が歩く、短い散歩と記憶、認識についてのお話を寄稿いただきました。DAISYWORLDの続編準備号、どうぞお楽しみください。<br><br>※イベント / ショップいずれも数量限定で、砂浜をミラとデイジーが歩くポストカードが付属します。
 		</p>
 		<ul class="detail">
 			<li>
@@ -99,12 +96,12 @@
 				<div>kirusu</div>
 			</li>
 			<li>
-				<div class="name">漫画</div>
-				<div>kirusu</div>
+				<div class="name">イラスト</div>
+				<div>kirusu, ginrei / 坪谷サトシ, 有馬トモユキ</div>
 			</li>
 			<li>
 				<div class="name">テキスト</div>
-				<div>shachi, 瀬島卓也</div>
+				<div>shachi</div>
 			</li>
 		</ul>
 	</article>
@@ -114,22 +111,22 @@
 			<li>
 				<div class="name">有馬トモユキ</div>
 				<div class="url"><a href="http://twitter.com/tatsdesign" target="_blank">@tatsdesign</a></div>
-				<div class="role">Concept Design, Planning, Writing</div>
+				<div class="role">Concept Design, Creative Direction, Design</div>
 			</li>
 			<li>
 				<div class="name">瀬島卓也</div>
 				<div class="url"><a href="http://twitter.com/sezitak" target="_blank">@sezitak</a></div>
-				<div class="role">Concept Design, Text</div>
+				<div class="role">Concept Design</div>
 			</li>
 			<li>
 				<div class="name">kirusu</div>
 				<div class="url"><a href="http://twitter.com/kirusu" target="_blank">@kirusu</a></div>
-				<div class="role">Comic, Cover Illustration</div>
+				<div class="role">Illustration</div>
 			</li>
 			<li>
 				<div class="name">shachi</div>
 				<div class="url"><a href="http://twitter.com/shachi" target="_blank">@shachi</a></div>
-				<div class="role">Text of &ldquo;DAISYWORLD: DAWN&rdquo;</div>
+				<div class="role">Text &ldquo;The Bridge&rdquo;</div>
 			</li>
 			<li>
 				<div class="name">Toshiki Izumi</div>
@@ -137,9 +134,9 @@
 				<div class="role">Website</div>
 			</li>
 			<li>
-				<div class="name">ginrei</div>
+				<div class="name">ginrei / 坪谷サトシ</div>
 				<div class="url"><a href="http://twitter.com/ginrei" target="_blank">@ginrei</a></div>
-				<div class="role">Concept</div>
+				<div class="role">Concept Design</div>
 			</li>
 		</ul>
 	</article>
