--- a/dswd8/index.html
+++ b/dswd8/index.html
@@ -9,7 +9,7 @@
 	<meta name="keywords" content="DAISYWORLD,SF,Science Fiction,コミックマーケット,COMICMARKET,コミケ,C95,tatsdesign,sezitak,kirusu,ginrei,shachi,toshiki_izumi" />
 	<meta name="viewport" content="width=1000px">
 
-	<meta property="og:title" content="DAISYWORLD: DAWN" />
+	<meta property="og:title" content="DAISYWORLD: CONTAINER" />
 	<meta property="og:description" content="「DAISYWORLD: CONTAINER」は2018.12.31のC95・3日目に東ハ-46abにて頒布されます。" />
 	<meta property="og:type" content="website" />
 	<meta property="og:image" content="http://dswd.jp/images/dswd8/card.png" />
